--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dailyprices",
+  "name": "CommodityPricing",
   "version": "0.1.0",
   "proxy": "http://localhost:5000",
   "private": true,
